# MYTHODIC-JUCE

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
Assets/Presets/: README.md  preset_manifest.json
Docs/: dsp-design.md  known-gaps.md  media-kit.md  release-checklist.md  repo-playbook.md  roadmap.md  seo-keywords.md  testing.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: AnalysisEngine.cpp  AnalysisEngine.h  MaskingModel.cpp  MaskingModel.h  OverlapDecisionCore.cpp  OverlapDecisionCore.h  OversampledToneCore.cpp  OversampledToneCore.h  RoomFusionEngine.cpp  RoomFusionEngine.h  SafetyOutput.cpp  SafetyOutput.h  SpatialEngine.cpp  SpatialEngine.h  Types.h
Source/util/: Constants.h  MathHelpers.h  ParameterLayout.cpp  ParameterLayout.h
site/: index.html
